refactor(tests) - change unit tests